--- a/polinomial_matrix.ipynb
+++ b/polinomial_matrix.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwzuM93G9Q9GEsBzWOIddV",
+      "authorship_tag": "ABX9TyMn4N1NdVnubgUWlLuWzcMX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -174,11 +174,13 @@
         "            print(f\"Ранняя остановка на итерации {epoch}\")\n",
         "            break\n",
         "\n",
-        "# Вывод результатов\n",
+        "# Вывод результатов с округлением\n",
         "print(\"Результаты:\")\n",
-        "results = np.column_stack([X * 10, predictions, y])\n",
-        "print(\"Исходные признаки -> Предсказание (Истинное)\")\n",
-        "print(results)\n",
+        "for i in range(len(X)):\n",
+        "    original_features = X[i] * 10\n",
+        "    prediction = np.dot(create_design_matrix(X_normalized[i:i+1]), weights)[0]\n",
+        "    print(f\"{original_features} -> {prediction:.4f} (Истинное: {int(y[i])})\")\n",
+        "\n",
         "print(f\"\\nСреднеквадратичная ошибка: {best_mse:.6f}\")"
       ],
       "metadata": {
@@ -186,36 +188,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ff531841-84b5-4c91-b43f-c88a61dff60e"
+        "outputId": "8813c85d-18ac-47af-bdbb-9ecc13023938"
       },
-      "execution_count": 6,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Результаты:\n",
-            "Исходные признаки -> Предсказание (Истинное)\n",
-            "[[ 5.0000000e+00  2.0000000e+00  1.0000000e+00  0.0000000e+00\n",
-            "  -4.2898297e-02  0.0000000e+00]\n",
-            " [ 6.0000000e+00  3.0000000e+00  2.0000000e+00  1.0000000e+00\n",
-            "   4.4485033e-02  0.0000000e+00]\n",
-            " [ 4.0000000e+00  1.0000000e+00  1.0000000e+00  0.0000000e+00\n",
-            "   1.9938886e-02  0.0000000e+00]\n",
-            " [ 7.0000000e+00  4.0000000e+00  6.0000000e+00  3.0000000e+00\n",
-            "   1.0128490e+00  1.0000000e+00]\n",
-            " [ 8.0000000e+00  5.0000000e+00  5.0000000e+00  4.0000000e+00\n",
-            "   9.9161398e-01  1.0000000e+00]\n",
-            " [ 6.0000000e+00  3.0000000e+00  4.0000000e+00  2.0000000e+00\n",
-            "   9.7317100e-01  1.0000000e+00]\n",
-            " [ 3.0000000e+00  8.0000000e+00  7.0000000e+00  9.0000000e+00\n",
-            "   1.0043318e+00  1.0000000e+00]\n",
-            " [ 4.0000000e+00  9.0000000e+00  8.0000000e+00  8.0000000e+00\n",
-            "  -1.8105507e-03  0.0000000e+00]\n",
-            " [ 2.0000000e+00  7.0000000e+00  6.0000000e+00  7.0000000e+00\n",
-            "   9.9669015e-01  1.0000000e+00]]\n",
+            "[5. 2. 1. 0.] -> -0.0367 (Истинное: 0)\n",
+            "[6. 3. 2. 1.] -> 0.0381 (Истинное: 0)\n",
+            "[4. 1. 1. 0.] -> 0.0170 (Истинное: 0)\n",
+            "[7. 4. 6. 3.] -> 1.0110 (Истинное: 1)\n",
+            "[8. 5. 5. 4.] -> 0.9928 (Истинное: 1)\n",
+            "[6. 3. 4. 2.] -> 0.9769 (Истинное: 1)\n",
+            "[3. 8. 7. 9.] -> 1.0037 (Истинное: 1)\n",
+            "[4. 9. 8. 8.] -> -0.0015 (Истинное: 0)\n",
+            "[2. 7. 6. 7.] -> 0.9972 (Истинное: 1)\n",
             "\n",
-            "Среднеквадратичная ошибка: 0.000578\n"
+            "Среднеквадратичная ошибка: 0.000424\n"
           ]
         }
       ]
