--- a/polinomial_matrix.ipynb
+++ b/polinomial_matrix.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMn4N1NdVnubgUWlLuWzcMX",
+      "authorship_tag": "ABX9TyPmRU9TmDYTOiCcJUnbHnyj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HOKO7RQEw6lY",
-        "outputId": "32d012f3-a4d5-4fa9-b647-86ec9130e72c"
+        "outputId": "7c03a616-2581-4c18-c184-cb385d8d7226"
       },
       "outputs": [
         {
@@ -42,17 +42,17 @@
           "name": "stdout",
           "text": [
             "Результаты:\n",
-            "[5. 2. 1. 0.] -> -0.1200 (Истинное: 0.0)\n",
-            "[6. 3. 2. 1.] -> 0.1785 (Истинное: 0.0)\n",
-            "[4. 1. 1. 0.] -> 0.0509 (Истинное: 0.0)\n",
-            "[7. 4. 6. 3.] -> 1.0982 (Истинное: 1.0)\n",
-            "[8. 5. 5. 4.] -> 0.9481 (Истинное: 1.0)\n",
-            "[6. 3. 4. 2.] -> 0.8447 (Истинное: 1.0)\n",
-            "[3. 8. 7. 9.] -> 1.0276 (Истинное: 1.0)\n",
-            "[4. 9. 8. 8.] -> -0.0154 (Истинное: 0.0)\n",
-            "[2. 7. 6. 7.] -> 0.9870 (Истинное: 1.0)\n",
+            "[5. 2. 1. 0.] -> -0.1186 (Истинное: 0.0)\n",
+            "[6. 3. 2. 1.] -> 0.1776 (Истинное: 0.0)\n",
+            "[4. 1. 1. 0.] -> 0.0515 (Истинное: 0.0)\n",
+            "[7. 4. 6. 3.] -> 1.1001 (Истинное: 1.0)\n",
+            "[8. 5. 5. 4.] -> 0.9489 (Истинное: 1.0)\n",
+            "[6. 3. 4. 2.] -> 0.8407 (Истинное: 1.0)\n",
+            "[3. 8. 7. 9.] -> 1.0272 (Истинное: 1.0)\n",
+            "[4. 9. 8. 8.] -> -0.0161 (Истинное: 0.0)\n",
+            "[2. 7. 6. 7.] -> 0.9881 (Истинное: 1.0)\n",
             "\n",
-            "Среднеквадратичная ошибка: 0.009611\n"
+            "Среднеквадратичная ошибка: 0.009716\n"
           ]
         }
       ],
@@ -188,26 +188,156 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8813c85d-18ac-47af-bdbb-9ecc13023938"
+        "outputId": "b21c267e-b194-4b96-af04-896e5e445be2"
       },
-      "execution_count": 20,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Результаты:\n",
-            "[5. 2. 1. 0.] -> -0.0367 (Истинное: 0)\n",
-            "[6. 3. 2. 1.] -> 0.0381 (Истинное: 0)\n",
-            "[4. 1. 1. 0.] -> 0.0170 (Истинное: 0)\n",
-            "[7. 4. 6. 3.] -> 1.0110 (Истинное: 1)\n",
-            "[8. 5. 5. 4.] -> 0.9928 (Истинное: 1)\n",
-            "[6. 3. 4. 2.] -> 0.9769 (Истинное: 1)\n",
-            "[3. 8. 7. 9.] -> 1.0037 (Истинное: 1)\n",
+            "[5. 2. 1. 0.] -> -0.0364 (Истинное: 0)\n",
+            "[6. 3. 2. 1.] -> 0.0378 (Истинное: 0)\n",
+            "[4. 1. 1. 0.] -> 0.0169 (Истинное: 0)\n",
+            "[7. 4. 6. 3.] -> 1.0109 (Истинное: 1)\n",
+            "[8. 5. 5. 4.] -> 0.9929 (Истинное: 1)\n",
+            "[6. 3. 4. 2.] -> 0.9771 (Истинное: 1)\n",
+            "[3. 8. 7. 9.] -> 1.0036 (Истинное: 1)\n",
             "[4. 9. 8. 8.] -> -0.0015 (Истинное: 0)\n",
             "[2. 7. 6. 7.] -> 0.9972 (Истинное: 1)\n",
             "\n",
-            "Среднеквадратичная ошибка: 0.000424\n"
+            "Среднеквадратичная ошибка: 0.000417\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Исходные данные\n",
+        "X = np.array([\n",
+        "    [5, 2, 1, 0], [6, 3, 2, 1], [4, 1, 1, 0],\n",
+        "    [7, 4, 6, 3], [8, 5, 5, 4], [6, 3, 4, 2],\n",
+        "    [3, 8, 7, 9], [4, 9, 8, 8], [2, 7, 6, 7],\n",
+        "], dtype=np.float32) / 10.0\n",
+        "\n",
+        "y = np.array([0, 0, 0, 1, 1, 1, 1, 0, 1], dtype=np.float32)\n",
+        "\n",
+        "# Функция для создания матрицы дизайна (всех термов)\n",
+        "def create_design_matrix(X):\n",
+        "    # Создаем пустую матрицу 9x15\n",
+        "    design_matrix = np.zeros((9, 15), dtype=np.float32)\n",
+        "\n",
+        "    # Заполняем каждый элемент вручную\n",
+        "    for i in range(9):\n",
+        "        x1, x2, x3, x4 = X[i][0], X[i][1], X[i][2], X[i][3]\n",
+        "\n",
+        "        # bias term\n",
+        "        design_matrix[i][0] = 1.0\n",
+        "\n",
+        "        # линейные термы\n",
+        "        design_matrix[i][1] = x1\n",
+        "        design_matrix[i][2] = x2\n",
+        "        design_matrix[i][3] = x3\n",
+        "        design_matrix[i][4] = x4\n",
+        "\n",
+        "        # квадратичные термы\n",
+        "        design_matrix[i][5] = x1*x1\n",
+        "        design_matrix[i][6] = x2*x2\n",
+        "        design_matrix[i][7] = x3*x3\n",
+        "        design_matrix[i][8] = x4*x4\n",
+        "\n",
+        "        # взаимодействия\n",
+        "        design_matrix[i][9] = x1*x2\n",
+        "        design_matrix[i][10] = x1*x3\n",
+        "        design_matrix[i][11] = x1*x4\n",
+        "        design_matrix[i][12] = x2*x3\n",
+        "        design_matrix[i][13] = x2*x4\n",
+        "        design_matrix[i][14] = x3*x4\n",
+        "\n",
+        "    return design_matrix\n",
+        "\n",
+        "# Создаем матрицу дизайна\n",
+        "design_matrix = create_design_matrix(X)\n",
+        "\n",
+        "# Красиво выводим матрицу дизайна\n",
+        "print(\"\\nМатрица дизайна (9x15):\")\n",
+        "print(\"=\"*120)\n",
+        "print(\"Sample | Bias  | X1    X2    X3    X4    | X1²    X2²    X3²    X4²   | X1X2   X1X3   X1X4   X2X3   X2X4   X3X4\")\n",
+        "print(\"-\"*120)\n",
+        "for i in range(9):\n",
+        "    row = design_matrix[i]\n",
+        "    print(f\"{i+1:2}     | {row[0]:.1f}  | \"\n",
+        "          f\"{row[1]:.2f}   {row[2]:.2f}   {row[3]:.2f}   {row[4]:.2f}   | \"\n",
+        "          f\"{row[5]:.3f}  {row[6]:.3f}  {row[7]:.3f}  {row[8]:.3f}  | \"\n",
+        "          f\"{row[9]:.3f}  {row[10]:.3f}  {row[11]:.3f}  {row[12]:.3f}  {row[13]:.3f}  {row[14]:.3f}\")\n",
+        "print(\"=\"*120)\n",
+        "\n",
+        "# Инициализация весов\n",
+        "weights = np.random.uniform(-0.1, 0.1, size=15).astype(np.float32)\n",
+        "\n",
+        "# Параметры обучения\n",
+        "learning_rate = 0.1\n",
+        "n_iterations = 10000\n",
+        "\n",
+        "# Обучение\n",
+        "for _ in range(n_iterations):\n",
+        "    predictions = np.dot(design_matrix, weights)\n",
+        "    errors = predictions - y\n",
+        "    gradient = np.dot(design_matrix.T, errors) / len(y)\n",
+        "    weights -= learning_rate * gradient\n",
+        "\n",
+        "print(\"\\nРезультаты:\")\n",
+        "for i in range(9):\n",
+        "    print(f\"{X[i]*10} -> {np.dot(design_matrix[i], weights):.4f} (Истинное: {y[i]})\")\n",
+        "\n",
+        "mse = np.mean((np.dot(design_matrix, weights) - y)**2)\n",
+        "print(f\"\\nСреднеквадратичная ошибка: {mse:.6f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bNNnPoEZwQqv",
+        "outputId": "7ad04f68-de3c-4cc7-cce0-f8f06c773212"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Матрица дизайна (9x15):\n",
+            "========================================================================================================================\n",
+            "Sample | Bias  | X1    X2    X3    X4    | X1²    X2²    X3²    X4²   | X1X2   X1X3   X1X4   X2X3   X2X4   X3X4\n",
+            "------------------------------------------------------------------------------------------------------------------------\n",
+            " 1     | 1.0  | 0.50   0.20   0.10   0.00   | 0.250  0.040  0.010  0.000  | 0.100  0.050  0.000  0.020  0.000  0.000\n",
+            " 2     | 1.0  | 0.60   0.30   0.20   0.10   | 0.360  0.090  0.040  0.010  | 0.180  0.120  0.060  0.060  0.030  0.020\n",
+            " 3     | 1.0  | 0.40   0.10   0.10   0.00   | 0.160  0.010  0.010  0.000  | 0.040  0.040  0.000  0.010  0.000  0.000\n",
+            " 4     | 1.0  | 0.70   0.40   0.60   0.30   | 0.490  0.160  0.360  0.090  | 0.280  0.420  0.210  0.240  0.120  0.180\n",
+            " 5     | 1.0  | 0.80   0.50   0.50   0.40   | 0.640  0.250  0.250  0.160  | 0.400  0.400  0.320  0.250  0.200  0.200\n",
+            " 6     | 1.0  | 0.60   0.30   0.40   0.20   | 0.360  0.090  0.160  0.040  | 0.180  0.240  0.120  0.120  0.060  0.080\n",
+            " 7     | 1.0  | 0.30   0.80   0.70   0.90   | 0.090  0.640  0.490  0.810  | 0.240  0.210  0.270  0.560  0.720  0.630\n",
+            " 8     | 1.0  | 0.40   0.90   0.80   0.80   | 0.160  0.810  0.640  0.640  | 0.360  0.320  0.320  0.720  0.720  0.640\n",
+            " 9     | 1.0  | 0.20   0.70   0.60   0.70   | 0.040  0.490  0.360  0.490  | 0.140  0.120  0.140  0.420  0.490  0.420\n",
+            "========================================================================================================================\n",
+            "\n",
+            "Результаты:\n",
+            "[5. 2. 1. 0.] -> -0.1206 (Истинное: 0.0)\n",
+            "[6. 3. 2. 1.] -> 0.1770 (Истинное: 0.0)\n",
+            "[4. 1. 1. 0.] -> 0.0525 (Истинное: 0.0)\n",
+            "[7. 4. 6. 3.] -> 1.0975 (Истинное: 1.0)\n",
+            "[8. 5. 5. 4.] -> 0.9495 (Истинное: 1.0)\n",
+            "[6. 3. 4. 2.] -> 0.8444 (Истинное: 1.0)\n",
+            "[3. 8. 7. 9.] -> 1.0267 (Истинное: 1.0)\n",
+            "[4. 9. 8. 8.] -> -0.0153 (Истинное: 0.0)\n",
+            "[2. 7. 6. 7.] -> 0.9878 (Истинное: 1.0)\n",
+            "\n",
+            "Среднеквадратичная ошибка: 0.009552\n"
           ]
         }
       ]
