--- a/polinomial_tasks.ipynb
+++ b/polinomial_tasks.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMAOnKwS5ZvEibVCLhCw+lH",
+      "authorship_tag": "ABX9TyM0xNz0D9MiVHutHMdVee04",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1255,6 +1255,209 @@
             "Ожидаемая площадь: 20.00\n",
             "Предсказанная площадь: 20.05\n",
             "Ошибка: 0.05\n",
+            "----------------------------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from tabulate import tabulate\n",
+        "\n",
+        "# Данные: стороны прямоугольника (a, b) и их площади (a*b)\n",
+        "X = np.array([\n",
+        "    [1, 1],  # Площадь = 1\n",
+        "    [2, 2],  # Площадь = 4\n",
+        "    [3, 3],  # Площадь = 9\n",
+        "    [1, 2],  # Площадь = 2\n",
+        "    [2, 3],  # Площадь = 6\n",
+        "    [3, 4],  # Площадь = 12\n",
+        "    [1, 3],  # Площадь = 3\n",
+        "    [2, 4],  # Площадь = 8\n",
+        "    [3, 5]   # Площадь = 15\n",
+        "])\n",
+        "\n",
+        "# Площади (целевые значения)\n",
+        "y = np.array([1, 4, 9, 2, 6, 12, 3, 8, 15])\n",
+        "\n",
+        "# Функция создания матрицы полиномиальных признаков (2-й степени)\n",
+        "def create_poly_matrix(X):\n",
+        "    a, b = X[:, 0], X[:, 1]\n",
+        "    return np.column_stack([\n",
+        "        np.ones(len(X)),  # свободный член\n",
+        "        a, b,            # линейные члены\n",
+        "        a*b,             # взаимодействие\n",
+        "        a**2, b**2       # квадраты\n",
+        "    ])\n",
+        "\n",
+        "# Создаем матрицу признаков\n",
+        "X_poly = create_poly_matrix(X)\n",
+        "feature_names = ['1', 'a', 'b', 'a*b', 'a²', 'b²']\n",
+        "\n",
+        "# Инициализация весов\n",
+        "weights = np.random.uniform(-0.1, 0.1, size=X_poly.shape[1])\n",
+        "\n",
+        "# Гиперпараметры Adam\n",
+        "learning_rate = 0.01\n",
+        "epochs = 5000\n",
+        "beta1 = 0.9\n",
+        "beta2 = 0.999\n",
+        "epsilon = 1e-8\n",
+        "\n",
+        "# Инициализация моментов для Adam\n",
+        "m = np.zeros_like(weights)\n",
+        "v = np.zeros_like(weights)\n",
+        "\n",
+        "# Обучение с Adam optimizer\n",
+        "for epoch in range(1, epochs + 1):\n",
+        "    # Прямое распространение\n",
+        "    predictions = X_poly @ weights\n",
+        "\n",
+        "    # Ошибка\n",
+        "    errors = predictions - y\n",
+        "\n",
+        "    # Градиент\n",
+        "    gradient = (X_poly.T @ errors) / len(X)\n",
+        "\n",
+        "    # Обновление моментов Adam\n",
+        "    m = beta1 * m + (1 - beta1) * gradient\n",
+        "    v = beta2 * v + (1 - beta2) * (gradient ** 2)\n",
+        "\n",
+        "    # Коррекция моментов (bias correction)\n",
+        "    m_hat = m / (1 - beta1 ** epoch)\n",
+        "    v_hat = v / (1 - beta2 ** epoch)\n",
+        "\n",
+        "    # Обновление весов\n",
+        "    weights -= learning_rate * m_hat / (np.sqrt(v_hat) + epsilon)\n",
+        "\n",
+        "    # Логирование\n",
+        "    if epoch % 500 == 0:\n",
+        "        loss = np.mean(errors**2)\n",
+        "        print(f\"Эпоха {epoch:4d}, Loss: {loss:.6f}\")\n",
+        "\n",
+        "# Вывод результатов\n",
+        "print(\"\\nОбученные веса:\")\n",
+        "print(tabulate(zip(feature_names, weights),\n",
+        "              headers=[\"Признак\", \"Вес\"],\n",
+        "              tablefmt=\"grid\",\n",
+        "              floatfmt=\".4f\"))\n",
+        "\n",
+        "# Проверка на обучающей выборке\n",
+        "print(\"\\nПроверка на обучающих данных:\")\n",
+        "results = []\n",
+        "for i in range(len(X)):\n",
+        "    pred = X_poly[i] @ weights\n",
+        "    results.append([\n",
+        "        f\"{X[i]}\",\n",
+        "        y[i],\n",
+        "        f\"{pred:.2f}\",\n",
+        "        f\"{abs(pred - y[i]):.2f}\"\n",
+        "    ])\n",
+        "\n",
+        "print(tabulate(results,\n",
+        "              headers=[\"Стороны\", \"Истинная площадь\", \"Предсказание\", \"Ошибка\"],\n",
+        "              tablefmt=\"grid\"))\n",
+        "\n",
+        "# Предсказание для новых данных\n",
+        "test_rects = np.array([\n",
+        "    [2.5, 2.5],  # Площадь = 6.25\n",
+        "    [1.5, 3.5],  # Площадь = 5.25\n",
+        "    [4.0, 5.0]   # Площадь = 20.0\n",
+        "])\n",
+        "\n",
+        "print(\"\\nТестирование на новых данных:\")\n",
+        "for rect in test_rects:\n",
+        "    # Создаем вектор признаков\n",
+        "    a, b = rect\n",
+        "    rect_features = np.array([1, a, b, a*b, a**2, b**2])\n",
+        "    prediction = rect_features @ weights\n",
+        "    print(f\"Стороны: {rect}\")\n",
+        "    print(f\"Ожидаемая площадь: {a*b:.2f}\")\n",
+        "    print(f\"Предсказанная площадь: {prediction:.2f}\")\n",
+        "    print(f\"Ошибка: {abs(prediction - a*b):.2f}\")\n",
+        "    print(\"-\" * 40)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZJ8sQjkUrvfY",
+        "outputId": "9819b18a-4b0b-4846-fbcd-03c3afb3be2f"
+      },
+      "execution_count": 250,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Эпоха  500, Loss: 0.044502\n",
+            "Эпоха 1000, Loss: 0.024099\n",
+            "Эпоха 1500, Loss: 0.020778\n",
+            "Эпоха 2000, Loss: 0.017182\n",
+            "Эпоха 2500, Loss: 0.013648\n",
+            "Эпоха 3000, Loss: 0.010472\n",
+            "Эпоха 3500, Loss: 0.007820\n",
+            "Эпоха 4000, Loss: 0.005704\n",
+            "Эпоха 4500, Loss: 0.004031\n",
+            "Эпоха 5000, Loss: 0.002699\n",
+            "\n",
+            "Обученные веса:\n",
+            "+-----------+---------+\n",
+            "| Признак   |     Вес |\n",
+            "+===========+=========+\n",
+            "| 1         |  0.0222 |\n",
+            "+-----------+---------+\n",
+            "| a         |  0.1904 |\n",
+            "+-----------+---------+\n",
+            "| b         | -0.1910 |\n",
+            "+-----------+---------+\n",
+            "| a*b       |  0.7696 |\n",
+            "+-----------+---------+\n",
+            "| a²        |  0.1261 |\n",
+            "+-----------+---------+\n",
+            "| b²        |  0.1082 |\n",
+            "+-----------+---------+\n",
+            "\n",
+            "Проверка на обучающих данных:\n",
+            "+-----------+--------------------+----------------+----------+\n",
+            "| Стороны   |   Истинная площадь |   Предсказание |   Ошибка |\n",
+            "+===========+====================+================+==========+\n",
+            "| [1 1]     |                  1 |           1.03 |     0.03 |\n",
+            "+-----------+--------------------+----------------+----------+\n",
+            "| [2 2]     |                  4 |           4.04 |     0.04 |\n",
+            "+-----------+--------------------+----------------+----------+\n",
+            "| [3 3]     |                  9 |           9.06 |     0.06 |\n",
+            "+-----------+--------------------+----------------+----------+\n",
+            "| [1 2]     |                  2 |           1.93 |     0.07 |\n",
+            "+-----------+--------------------+----------------+----------+\n",
+            "| [2 3]     |                  6 |           5.93 |     0.07 |\n",
+            "+-----------+--------------------+----------------+----------+\n",
+            "| [3 4]     |                 12 |          11.93 |     0.07 |\n",
+            "+-----------+--------------------+----------------+----------+\n",
+            "| [1 3]     |                  3 |           3.05 |     0.05 |\n",
+            "+-----------+--------------------+----------------+----------+\n",
+            "| [2 4]     |                  8 |           8.03 |     0.03 |\n",
+            "+-----------+--------------------+----------------+----------+\n",
+            "| [3 5]     |                 15 |          15.02 |     0.02 |\n",
+            "+-----------+--------------------+----------------+----------+\n",
+            "\n",
+            "Тестирование на новых данных:\n",
+            "Стороны: [2.5 2.5]\n",
+            "Ожидаемая площадь: 6.25\n",
+            "Предсказанная площадь: 6.29\n",
+            "Ошибка: 0.04\n",
+            "----------------------------------------\n",
+            "Стороны: [1.5 3.5]\n",
+            "Ожидаемая площадь: 5.25\n",
+            "Предсказанная площадь: 5.29\n",
+            "Ошибка: 0.04\n",
+            "----------------------------------------\n",
+            "Стороны: [4. 5.]\n",
+            "Ожидаемая площадь: 20.00\n",
+            "Предсказанная площадь: 19.94\n",
+            "Ошибка: 0.06\n",
             "----------------------------------------\n"
           ]
         }
