--- a/2_maps_shift.ipynb
+++ b/2_maps_shift.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIc7DLKeSmK3xK0HwKH94t",
+      "authorship_tag": "ABX9TyMVQRsF+yxw3K+pY9rEDgzw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,9 +120,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mr8mXCP64Lzq",
-        "outputId": "1b58deb5-dca9-4a19-cc79-06aa2e7b17db"
+        "outputId": "93206717-ccaf-4098-f5a6-69b44e8042f8"
       },
-      "execution_count": 30,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,6 +163,236 @@
             " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n",
             "\n",
             "Предсказанное смещение: (dy=-1, dx=-2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from scipy.ndimage import rotate\n",
+        "import numpy.fft as fft\n",
+        "\n",
+        "# --- Задаем матрицы как константы ---\n",
+        "MAP_PREV = np.array([\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+        "])\n",
+        "\n",
+        "MAP_CURR = np.array([\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+        "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+        "])\n",
+        "\n",
+        "def find_translation(map_ref: np.ndarray, map_target: np.ndarray) -> tuple[int, int]:\n",
+        "    \"\"\"\n",
+        "    Вычисляет смещение между двумя картами, используя фазовую корреляцию.\n",
+        "    Эта функция предназначена для нахождения линейного смещения.\n",
+        "\n",
+        "    Аргументы:\n",
+        "        map_ref: Первая карта (опорная).\n",
+        "        map_target: Вторая карта (целевая).\n",
+        "\n",
+        "    Возвращает:\n",
+        "        Кортеж (dy, dx), представляющий вертикальное и горизонтальное смещение.\n",
+        "    \"\"\"\n",
+        "    fft_ref = fft.fft2(map_ref)\n",
+        "    fft_target = fft.fft2(map_target)\n",
+        "\n",
+        "    # Вычисляем спектр взаимной мощности (cross-power spectrum)\n",
+        "    # Добавляем небольшое эпсилон для избежания деления на ноль.\n",
+        "    cross_power_spectrum = (fft_ref * np.conj(fft_target)) / (np.abs(fft_ref) * np.abs(fft_target) + 1e-10)\n",
+        "\n",
+        "    # Выполняем обратное преобразование Фурье\n",
+        "    phase_corr_matrix = fft.ifft2(cross_power_spectrum)\n",
+        "    phase_corr_shifted = fft.fftshift(np.abs(phase_corr_matrix))\n",
+        "\n",
+        "    # Находим пик в матрице фазовой корреляции\n",
+        "    max_pos = np.unravel_index(np.argmax(phase_corr_shifted), phase_corr_shifted.shape)\n",
+        "\n",
+        "    # Вычисляем смещение относительно центра матрицы\n",
+        "    center_y, center_x = np.array(phase_corr_shifted.shape) // 2\n",
+        "    dy = max_pos[0] - center_y\n",
+        "    dx = max_pos[1] - center_x\n",
+        "\n",
+        "    return dy, dx\n",
+        "\n",
+        "def find_rotation_and_translation(map_ref: np.ndarray, map_target: np.ndarray) -> tuple[int, int, float]:\n",
+        "    \"\"\"\n",
+        "    Оценивает поворот и смещение между двумя картами, используя итеративный поиск угла\n",
+        "    и фазовую корреляцию.\n",
+        "\n",
+        "    Аргументы:\n",
+        "        map_ref: Опорная карта (например, предыдущий скан).\n",
+        "        map_target: Целевая карта (например, текущий скан).\n",
+        "\n",
+        "    Возвращает:\n",
+        "        Кортеж (dy, dx, estimated_angle), представляющий вертикальное смещение,\n",
+        "        горизонтальное смещение и угол поворота.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    max_correlation_value = -1.0 # Инициализируем максимальное значение корреляции\n",
+        "    best_angle = 0.0             # Инициализируем лучший угол\n",
+        "\n",
+        "    # Предварительно вычисляем FFT для опорной карты, так как она не меняется в цикле.\n",
+        "    fft_ref_precomputed = fft.fft2(map_ref)\n",
+        "\n",
+        "    # Диапазон поиска углов. Уменьшен шаг для потенциально лучшей точности.\n",
+        "    angle_range = np.arange(-45, 45.1, 0.5) # От -45 до +45 градусов с шагом 0.5 градуса\n",
+        "\n",
+        "    print(\"Поиск угла поворота...\")\n",
+        "    # Перебираем возможные углы поворота\n",
+        "    for angle in angle_range:\n",
+        "        # Поворачиваем map_target на текущий угол.\n",
+        "        # reshape=False сохраняет размер матрицы.\n",
+        "        # mode='constant', cval=0 заполняет новые пиксели нулями.\n",
+        "        # order=3 для бикубической интерполяции, которая дает лучшее качество.\n",
+        "        rotated_map_target = rotate(map_target, angle=angle, reshape=False, mode='constant', cval=0, order=3)\n",
+        "        # Округляем значения и приводим к целому типу (0 или 1), так как интерполяция может дать дробные.\n",
+        "        rotated_map_target_binary = np.round(rotated_map_target).astype(int)\n",
+        "\n",
+        "        # Вычисляем фазовую корреляцию между map_ref и повернутой map_target\n",
+        "        fft_rotated_map_target = fft.fft2(rotated_map_target_binary)\n",
+        "\n",
+        "        # Спектр взаимной мощности для определения корреляции\n",
+        "        cross_power_spectrum = (fft_ref_precomputed * np.conj(fft_rotated_map_target)) / \\\n",
+        "                               (np.abs(fft_ref_precomputed) * np.abs(fft_rotated_map_target) + 1e-10)\n",
+        "        phase_corr_matrix = fft.ifft2(cross_power_spectrum)\n",
+        "\n",
+        "        # Находим максимальное значение корреляции для текущего угла\n",
+        "        current_max_corr = np.max(np.abs(phase_corr_matrix))\n",
+        "\n",
+        "        # Если текущая корреляция лучше, обновляем лучший угол\n",
+        "        if current_max_corr > max_correlation_value:\n",
+        "            max_correlation_value = current_max_corr\n",
+        "            best_angle = angle\n",
+        "\n",
+        "    print(f\"Найденный оптимальный угол (грубая оценка): {best_angle:.1f} градусов с максимальной корреляцией {max_correlation_value:.4f}\")\n",
+        "\n",
+        "    # --- Шаг 2: Коррекция поворота и оценка смещения ---\n",
+        "    # Поворачиваем map_target на найденный оптимальный угол, чтобы выровнять по вращению\n",
+        "    map_target_corrected_rotation = rotate(map_target, angle=best_angle, reshape=False, mode='constant', cval=0, order=3)\n",
+        "    map_target_corrected_rotation_binary = np.round(map_target_corrected_rotation).astype(int)\n",
+        "\n",
+        "    # Теперь, когда поворот скорректирован, находим линейное смещение\n",
+        "    dy, dx = find_translation(map_ref, map_target_corrected_rotation_binary)\n",
+        "\n",
+        "    return dy, dx, best_angle\n",
+        "\n",
+        "# --- Выполняем оценку ---\n",
+        "dy, dx, estimated_angle = find_rotation_and_translation(MAP_PREV, MAP_CURR)\n",
+        "\n",
+        "# --- Выводим результаты ---\n",
+        "print(\"\\n\" + \"=\"*50)\n",
+        "print(\"Результаты анализа смещения и поворота:\")\n",
+        "print(\"=\"*50)\n",
+        "print(\"Предыдущая матрица (MAP_PREV):\")\n",
+        "print(MAP_PREV)\n",
+        "print(\"\\nТекущая матрица (MAP_CURR):\")\n",
+        "print(MAP_CURR)\n",
+        "print(f\"\\nПредсказанное смещение: (dy={dy}, dx={dx})\")\n",
+        "print(f\"Предсказанный угол поворота: {estimated_angle:.1f} градусов\")\n",
+        "\n",
+        "print(\"\\n\" + \"=\"*50)\n",
+        "print(\"Примечание:\")\n",
+        "print(\"Предсказанный угол определяется путем итеративного поиска и зависит от\")\n",
+        "print(\"выбранного диапазона и шага углов. Точность может быть улучшена\")\n",
+        "print(\"уменьшением шага или использованием более сложных методов (например,\")\n",
+        "print(\"преобразования Фурье-Меллина).\")\n",
+        "print(\"Ошибки интерполяции при повороте могут повлиять на точность смещения.\")\n",
+        "print(\"=\"*50)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "waVj8Y5B66yy",
+        "outputId": "cdeedaf5-e7a3-491f-eb07-715d32cbc7a7"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Поиск угла поворота...\n",
+            "Найденный оптимальный угол (грубая оценка): -45.0 градусов с максимальной корреляцией 0.5378\n",
+            "\n",
+            "==================================================\n",
+            "Результаты анализа смещения и поворота:\n",
+            "==================================================\n",
+            "Предыдущая матрица (MAP_PREV):\n",
+            "[[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+            " [0 0 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+            " [0 0 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+            " [0 0 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+            " [0 0 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n",
+            "\n",
+            "Текущая матрица (MAP_CURR):\n",
+            "[[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+            " [0 1 1 1 1 1 1 1 0 0 0 0 0 0 0]\n",
+            " [0 0 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n",
+            "\n",
+            "Предсказанное смещение: (dy=1, dx=-3)\n",
+            "Предсказанный угол поворота: -45.0 градусов\n",
+            "\n",
+            "==================================================\n",
+            "Примечание:\n",
+            "Предсказанный угол определяется путем итеративного поиска и зависит от\n",
+            "выбранного диапазона и шага углов. Точность может быть улучшена\n",
+            "уменьшением шага или использованием более сложных методов (например,\n",
+            "преобразования Фурье-Меллина).\n",
+            "Ошибки интерполяции при повороте могут повлиять на точность смещения.\n",
+            "==================================================\n"
           ]
         }
       ]
