--- a/random_simulate.ipynb
+++ b/random_simulate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMF2i2ojp05wg385LcaeoJB",
+      "authorship_tag": "ABX9TyO834cSrp5taBI7Y3HXttKz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -116,24 +116,24 @@
         "# Текущий счет: 5-3 (1-му игроку нужно 1 победа, 2-му - 3)\n",
         "p1_prob, p2_prob = simulate_match(5, 3)\n",
         "\n",
-        "print(f\"Вероятность победы 1-го игрока: {p1_prob:.4f} (теоретическая: 0.875)\")\n",
-        "print(f\"Вероятность победы 2-го игрока: {p2_prob:.4f} (теоретическая: 0.125)\")"
+        "print(f\"Вероятность победы 1-го игрока: {p1_prob:.4f} (теоретическая: 1 - (1/2)^3 = 0.875)\")\n",
+        "print(f\"Вероятность победы 2-го игрока: {p2_prob:.4f} (теоретическая: (1/2)^3 = 0.125)\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wxKDUn00aeVl",
-        "outputId": "5ab490bc-3b00-4295-aa68-a7032e995c15"
+        "outputId": "f6af0eea-0f44-4af9-e6ec-a9bd4d0181de"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Вероятность победы 1-го игрока: 0.8741 (теоретическая: 0.875)\n",
-            "Вероятность победы 2-го игрока: 0.1259 (теоретическая: 0.125)\n"
+            "Вероятность победы 1-го игрока: 0.8758 (теоретическая: 1 - (1/2)^3 = 0.875)\n",
+            "Вероятность победы 2-го игрока: 0.1242 (теоретическая: (1/2)^3 = 0.125)\n"
           ]
         }
       ]
